api/s2n.h

extern __thread int s2n_errno;
typedef enum {
    S2N_ERR_T_OK = 0,
    S2N_ERR_T_IO,
    S2N_ERR_T_CLOSED,
    S2N_ERR_T_BLOCKED,
    S2N_ERR_T_ALERT,
    S2N_ERR_T_PROTO,
    S2N_ERR_T_INTERNAL,
    S2N_ERR_T_USAGE
} s2n_error_type;
extern int s2n_error_get_type(int error);
struct s2n_config;
struct s2n_connection;
extern unsigned long      s2n_get_openssl_version(void);
extern int                s2n_init(void);
extern int                s2n_cleanup(void);
extern struct s2n_config *s2n_config_new(void);
extern int                s2n_config_free(struct s2n_config *config);
extern int                s2n_config_free_dhparams(struct s2n_config *config);
extern int                s2n_config_free_cert_chain_and_key(struct s2n_config *config);
typedef int (*s2n_clock_time_nanoseconds)(void *, uint64_t *);
typedef int (*s2n_cache_retrieve_callback)(struct s2n_connection *conn, void *, const void *key, uint64_t key_size,
                                           void *value, uint64_t *value_size);
typedef int (*s2n_cache_store_callback)(struct s2n_connection *conn, void *, uint64_t ttl_in_seconds, const void *key,
                                        uint64_t key_size, const void *value, uint64_t value_size);
typedef int (*s2n_cache_delete_callback)(struct s2n_connection *conn, void *, const void *key, uint64_t key_size);
extern int s2n_config_set_wall_clock(struct s2n_config *config, s2n_clock_time_nanoseconds clock_fn, void *ctx);
extern int s2n_config_set_monotonic_clock(struct s2n_config *config, s2n_clock_time_nanoseconds clock_fn, void *ctx);
extern const char *s2n_strerror(int error, const char *lang);
extern const char *s2n_strerror_debug(int error, const char *lang);
extern const char *s2n_strerror_name(int error);
struct s2n_stacktrace;
extern bool s2n_stack_traces_enabled(void);
extern int  s2n_stack_traces_enabled_set(bool newval);
extern int  s2n_calculate_stacktrace(void);
extern int  s2n_print_stacktrace(FILE *fptr);
extern int  s2n_free_stacktrace(void);
extern int  s2n_get_stacktrace(struct s2n_stacktrace *trace);
extern int s2n_config_set_cache_store_callback(struct s2n_config *config, s2n_cache_store_callback cache_store_callback,
                                               void *data);
extern int s2n_config_set_cache_retrieve_callback(struct s2n_config *         config,
                                                  s2n_cache_retrieve_callback cache_retrieve_callback, void *data);
extern int s2n_config_set_cache_delete_callback(struct s2n_config *       config,
                                                s2n_cache_delete_callback cache_delete_callback, void *data);
typedef int (*s2n_mem_init_callback)(void);
typedef int (*s2n_mem_cleanup_callback)(void);
typedef int (*s2n_mem_malloc_callback)(void **ptr, uint32_t requested, uint32_t *allocated);
typedef int (*s2n_mem_free_callback)(void *ptr, uint32_t size);
extern int s2n_mem_set_callbacks(s2n_mem_init_callback mem_init_callback, s2n_mem_cleanup_callback mem_cleanup_callback,
                                 s2n_mem_malloc_callback mem_malloc_callback, s2n_mem_free_callback mem_free_callback);
typedef enum {
    S2N_EXTENSION_SERVER_NAME              = 0,
    S2N_EXTENSION_MAX_FRAG_LEN             = 1,
    S2N_EXTENSION_OCSP_STAPLING            = 5,
    S2N_EXTENSION_SUPPORTED_GROUPS         = 10,
    S2N_EXTENSION_EC_POINT_FORMATS         = 11,
    S2N_EXTENSION_SIGNATURE_ALGORITHMS     = 13,
    S2N_EXTENSION_ALPN                     = 16,
    S2N_EXTENSION_CERTIFICATE_TRANSPARENCY = 18,
    S2N_EXTENSION_RENEGOTIATION_INFO       = 65281,
} s2n_tls_extension_type;
typedef enum {
    S2N_TLS_MAX_FRAG_LEN_512  = 1,
    S2N_TLS_MAX_FRAG_LEN_1024 = 2,
    S2N_TLS_MAX_FRAG_LEN_2048 = 3,
    S2N_TLS_MAX_FRAG_LEN_4096 = 4,
} s2n_max_frag_len;
struct s2n_cert_chain_and_key;
struct s2n_pkey;
typedef struct s2n_pkey s2n_cert_public_key;
typedef struct s2n_pkey s2n_cert_private_key;
extern struct s2n_cert_chain_and_key *s2n_cert_chain_and_key_new(void);
extern int   s2n_cert_chain_and_key_load_pem(struct s2n_cert_chain_and_key *chain_and_key, const char *chain_pem,
                                             const char *private_key_pem);
extern int   s2n_cert_chain_and_key_free(struct s2n_cert_chain_and_key *cert_and_key);
extern int   s2n_cert_chain_and_key_set_ctx(struct s2n_cert_chain_and_key *cert_and_key, void *ctx);
extern void *s2n_cert_chain_and_key_get_ctx(struct s2n_cert_chain_and_key *cert_and_key);
extern s2n_cert_private_key *s2n_cert_chain_and_key_get_private_key(struct s2n_cert_chain_and_key *cert_and_key);
typedef struct s2n_cert_chain_and_key *(*s2n_cert_tiebreak_callback)(struct s2n_cert_chain_and_key *cert1,
                                                                     struct s2n_cert_chain_and_key *cert2,
                                                                     uint8_t *name, uint32_t name_len);
extern int s2n_config_set_cert_tiebreak_callback(struct s2n_config *        config,
                                                 s2n_cert_tiebreak_callback cert_tiebreak_cb);
extern int s2n_config_add_cert_chain_and_key(struct s2n_config *config, const char *cert_chain_pem,
                                             const char *private_key_pem);
extern int s2n_config_add_cert_chain_and_key_to_store(struct s2n_config *            config,
                                                      struct s2n_cert_chain_and_key *cert_key_pair);
extern int s2n_config_set_cert_chain_and_key_defaults(struct s2n_config *             config,
                                                      struct s2n_cert_chain_and_key **cert_key_pairs,
                                                      uint32_t                        num_cert_key_pairs);
extern int s2n_config_set_verification_ca_location(struct s2n_config *config, const char *ca_pem_filename,
                                                   const char *ca_dir);
extern int s2n_config_add_pem_to_trust_store(struct s2n_config *config, const char *pem);
typedef uint8_t (*s2n_verify_host_fn)(const char *host_name, size_t host_name_len, void *data);
/* will be inherited by s2n_connection. If s2n_connection specifies a callback, that callback will be used for that connection. */
extern int s2n_config_set_verify_host_callback(struct s2n_config *config, s2n_verify_host_fn, void *data);
extern int s2n_config_set_check_stapled_ocsp_response(struct s2n_config *config, uint8_t check_ocsp);
extern int s2n_config_disable_x509_verification(struct s2n_config *config);
extern int s2n_config_set_max_cert_chain_depth(struct s2n_config *config, uint16_t max_depth);
extern int s2n_config_add_dhparams(struct s2n_config *config, const char *dhparams_pem);
extern int s2n_config_set_cipher_preferences(struct s2n_config *config, const char *version);
extern int s2n_config_set_protocol_preferences(struct s2n_config *config, const char *const *protocols,
                                               int protocol_count);